# chat-microservice

./: .gitignore  docker-compose.yml  pyproject.toml
docker/dev/env/: .env
web/api/v1/: urls.py
web/api/v1/chat/: filters.py  serializers.py  services.py  urls.py  views.py
web/api/v1/chat/tests/: conftest.py  test_chat_consumer.py
web/chat/: admin.py  consumers.py  middleware.py  models.py  services.py  urls.py  views.py
web/chat/migrations/: 0001_initial.py  0002_alter_chat_options_chat_created_alter_chat_id_and_more.py  0003_alter_chat_name.py  0004_alter_message_options_alter_message_author.py  0005_alter_message_options.py  0006_message_file_alter_message_body.py
web/chat/static/chat/css/: chat.css
web/chat/static/chat/js/: chat.js  init.js  socket.js
web/chat/templates/chat/: init.html  room.html
web/main/: services.py  storages.py  urls.py  utils.py
web/src/: asgi.py  settings.py  urls.py
web/src/requirements/: base.txt  local.txt
