[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = [".git ", "node_modules", "venv"]
addopts = "--tb=short --nomigrations -s"
python_files = "*test*.py"
python_classes = "*Test*"
DJANGO_SETTINGS_MODULE = "src.settings_prod"
log_cli = "true"
log_cli_level = "inf

[tool.mypy]
python_version = "3.10
cache_dir = ".cache/mypy"
exclude = [
  "tests"
]
